fix: fix component spacing for label
affects: @fremtind/jkl-toggle-switch

--- a/packages/toggle-switch/toggle-switch.scss
+++ b/packages/toggle-switch/toggle-switch.scss
@@ -94,7 +94,7 @@ $inverted-disabled-color: #969696;
 
     &__label {
         margin-bottom: 0;
-        padding-left: $toggle-width + $component-spacing--xxl;
+        padding-left: $component-spacing--small;
     }
 
     &__slider {
